tests/NormalTests/paczka1/fuzzy1/61878816.err
Error in line 2: DNlPPKJp S398 92,2
Error in line 7: wdEU S476 -5,3
Error in line 4: wdEU S476 94,9
Error in line 9: DNlPPKJp S476 833,8
Error in line 20: S476 S398 0,1
Error in line 25: wBz7 S476 86,6
